--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,13 @@
 [build]
-  functions = "netlify/functions"
-  publish = "public"
+  command = "npm run build"
+  publish = ".next"  
+  functions = "netlify/functions"  
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [dev]
-  functions = "netlify/functions"
+  functions = "netlify/functions"  
 
 [[redirects]]
   from = "/api/randomverse"
